FMA 0.2.2: extend BaseRelaySource; ABI drops interface defaults (cross-APK desugaring fix)
Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>