@@ -1,5 +1,7 @@
 package dev.relay.music.source.api;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 public final class RelaySourcePage {
@@ -11,7 +13,8 @@ public final class RelaySourcePage {
     }
 
     public RelaySourcePage(List<RelaySourceTrack> tracks, boolean hasNextPage) {
-        this.tracks = List.copyOf(tracks);
+        // List.copyOf is API 31+ on Android; this ABI must run on minSdk 23 devices.
+        this.tracks = Collections.unmodifiableList(new ArrayList<>(tracks));
         this.hasNextPage = hasNextPage;
     }
 
